Configurando swagger
